<resources>
    <string name="app_name">DartScorer</string>
    <string name="welcome_message">Please select a game:</string>
    <string name="cricket_select">Cricket</string>
    <string name="three01_select">301</string>
    <string name="five01_select">501</string>
    <string name="seven01_select">701</string>
    <string name="player_select">Player Select</string>
    <string name="num_player_select">Select number of players</string>
    <string name="name_player_select">Names of players</string>
    <string name="game_start">Start Game!</string>
    <string name="cricketwinner_text">is the winner with a score of</string>
    <string name="cricketwinner_rounds">on round</string>
    <string name="cricketwinner_done">Another game?</string>
    <string name="dartone">Dart 1</string>
    <string name="darttwo">Dart 2</string>
    <string name="dartthree">Dart 3</string>
    <string name="dartClear">Clear the dart scores?</string>
    <string name="singleBull">Single Bull</string>
    <string name="doubleBull">Double Bull</string>
    <string name="three01winner_text">is the winner</string>
    <string name="done">Done!</string>
    <string name="double_in">Double in</string>
    <string name="double_out">Double out</string>
    <string name="undo">Undo</string>
</resources>
