<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".CricketWinner"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cricketwinnerName"
        android:textSize="72sp"
        android:gravity="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cricketwinnerText"
        android:textSize="54sp"
        android:text="@string/cricketwinner_text"
        android:gravity="center"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cricketwinnerScore"
        android:textSize="72sp"
        android:gravity="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="54sp"
        android:text="@string/cricketwinner_rounds"
        android:gravity="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cricketwinnerRounds"
        android:textSize="72sp"
        android:gravity="center"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cricketWinnerDone"
        android:textSize="32sp"
        android:gravity="center"
        android:text="@string/cricketwinner_done"
        />


</LinearLayout>