<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="vertical"
    tools:context=".namesSelect">

    <TextView
        android:id="@+id/textNamesGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
 />

    <ListView
        android:id="@+id/lvplayerNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnstartGame"
        android:layout_below="@id/textNamesGame"
        android:layout_alignParentTop="true"
        android:drawSelectorOnTop="false"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lldouble"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:text="@string/double_in"
            android:id="@+id/cbDoublein"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:text="@string/double_out"
            android:id="@+id/cbDoubleout"
            />
    </LinearLayout>


    <Button
        android:id="@+id/btnstartGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_start"
        android:textSize="30sp" />


</LinearLayout>

